--- a/static/index.html
+++ b/static/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <body>
+  <head>
+    <meta charset="utf8"/>
+  </head>
+  <body>
 
     <h1>My First Heading</h1>
     <p>My first paragraph.</p>
+
+    <textarea id="textarea"></textarea>
 
     <script src="/js/app.bundle.js"></script>
   </body>
