--- a/static/index.html
+++ b/static/index.html
@@ -5,8 +5,7 @@
   </head>
   <body>
 
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
+    <h1>PyPlay</h1>
 
     <textarea id="textarea"></textarea>
 
