--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf8"/>
   </head>
   <body>
+    <div>
+      <button class="btn btn-primary">sdkjhgks</button>
+    </div>
 
     <h1>PyPlay</h1>
 
