--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
       <!-- Links -->
       <ul class="navbar-nav">
         <a class="navbar-brand" href="#">
-          <img src="/logo.png" alt="Logo" style="width:40px;">
+          <img src="/images/logo.png" alt="Logo" style="width:30px;">
         </a>
         <li class="nav-item">
           <a class="nav-link" href="#">Games</a>
