--- a/static/index.html
+++ b/static/index.html
@@ -5,9 +5,10 @@
   </head>
   <body>
     <h1>PyPlay</h1>
-
-    <textarea id="textarea"></textarea>
-
-    <script src="/js/app.bundle.js"></script>
+    <div style="width: 50vw;">
+      <textarea id="textarea"></textarea>
+  
+      <script src="/js/app.bundle.js"></script>
+    </div>
   </body>
 </html> 
