--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
       <!-- Links -->
       <ul class="navbar-nav">
         <a class="navbar-brand" href="#">
-          <img src="/images/logo.png" alt="Logo" style="width:30px;">
+          <img src="/images/logo.png" alt="Logo" style="width:50px;">
         </a>
         <li class="nav-item">
           <a class="nav-link" href="#">Games</a>
@@ -27,7 +27,7 @@
     </nav>
 
     <h1>PyPlay</h1>
-    <div style="width: 50vw;">
+    <div style="width: 50vw; height: 100%;">
       <textarea id="textarea"></textarea>
   
       <script src="/js/app.bundle.js"></script>
