--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
     </nav>
 
     <h1>PyPlay</h1>
-    <div style="width: 50vw; height: 100%;">
+    <div style="width: 50vw; height: 84vh;">
       <textarea id="textarea"></textarea>
   
       <script src="/js/app.bundle.js"></script>
