Adds Python interpreter

--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf8"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <script src="/skulpt.js"></script>
+    <script src="/builtin.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-dark">
@@ -29,6 +31,8 @@
     <h1>PyPlay</h1>
     <div style="width: 50vw;">
       <textarea id="textarea"></textarea>
+
+      <button id="run">Run</button>
   
       <script src="/js/app.bundle.js"></script>
     </div>
