Changes how height of text editor is calculated

--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
       </ul>
     
     </nav>
-    <div style="width: 50vw; height: 91vh;">
+    <div style="width: 50vw; height: calc(100vh - 75.78px);">
       <textarea id="textarea"></textarea>
 
       <button id="run">Run</button>
