changed button style

--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@
     <div style="width: 50vw; height: calc(100vh - 75.78px);">
       <textarea id="textarea"></textarea>
 
-      <button id="run">Run</button>
+      <button class = "btn btn-warning m-2" id="run">Run</button>
   
       <script src="/js/app.bundle.js"></script>
     </div>
