--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-dark">
-
       <!-- Links -->
       <ul class="navbar-nav">
         <a class="navbar-brand" href="#">
@@ -27,12 +26,17 @@
       </ul>
     
     </nav>
-    <div style="width: 50vw; height: 91vh;">
-      <textarea id="textarea"></textarea>
+    <section class = "container" style="width: 100vw; height: 91vh; padding:0">
+      <div style="width: 50vw; height: 91vh; display:inline-block">
+        <textarea id="textarea"></textarea>
 
-      <button id="run">Run</button>
-  
-      <script src="/js/app.bundle.js"></script>
-    </div>
+        <button id="run">Run</button>
+    
+      </div>
+      <div style="float:right; width: 50vw; height: 91vh; display:inline-block">
+        <canvas id="canvas" style="width:100%; height:100%"></canvas>
+      </div>
+    </section>
+  <script src="/js/app.bundle.js"></script>
   </body>
 </html> 
