--- a/static/index.html
+++ b/static/index.html
@@ -26,14 +26,14 @@
       </ul>
     
     </nav>
-    <section class = "container" style="width: 100vw; height: 91vh; padding:0">
-      <div style="width: 50vw; height: calc(100vh - 75.78px); display:inline-block">
+    <section style="width: 100vw; height: calc(100vh - 75.78px); padding:0">
+      <div style="float:left; width: 50%; height: 100%; display:inline-block">
         <textarea id="textarea"></textarea>
 
         <button class = "btn btn-warning m-2" id="run">Run</button>
     
       </div>
-      <div style="float:right; width: 50vw; height: 91vh; display:inline-block">
+      <div style="float:right; width: 50%; height:100%; display:inline-block">
         <canvas id="canvas" style="width:100%; height:100%"></canvas>
       </div>
     </section>
