--- a/static/index.html
+++ b/static/index.html
@@ -26,17 +26,17 @@
       </ul>
     
     </nav>
-    <section class = "container" style="width: 100vw; height: 91vh; padding:0">
-      <div style="width: 50vw; height: calc(100vh - 75.78px); display:inline-block">
+    <div style="width: 100vw; height: 91vh;display: flex;">
+      <div style="width: 50%; height: calc(100vh - 75.78px); float:left;">
         <textarea id="textarea"></textarea>
 
         <button class = "btn btn-warning m-2" id="run">Run</button>
     
       </div>
-      <div style="float:right; width: 50vw; height: 91vh; display:inline-block">
+      <div style="width: 50%; height: calc(100vh - 75.78px);">
         <canvas id="canvas" style="width:100%; height:100%"></canvas>
       </div>
-    </section>
+    </div>
   <script src="/js/app.bundle.js"></script>
   </body>
 </html> 
