--- a/static/index.html
+++ b/static/index.html
@@ -36,7 +36,7 @@
       </div>
       <div style="width: 50%; height: calc(100vh - 75.78px);">
 
-        <canvas id="canvas" style="width:100%; height:100%"></canvas>
+        <canvas id="canvas"></canvas>
       </div>
     </div>
   <script src="/js/app.bundle.js"></script>
