remove unecessary css

--- a/static/index.html
+++ b/static/index.html
@@ -27,14 +27,14 @@
     
     </nav>
     <div style="width: 100vw; height: calc(100vh - 75.78px);display: flex;">
-      <div style="width: 50%; height: calc(100vh - 75.78px); float:left;">
+      <div style="width: 50%; float:left;">
 
         <textarea id="textarea"></textarea>
 
         <button class = "btn btn-warning m-2" id="run">Run</button>
     
       </div>
-      <div style="width: 50%; height: calc(100vh - 75.78px);">
+      <div style="width: 50%;">
 
         <canvas id="canvas"></canvas>
       </div>
