Adds code for graphics interop

--- a/static/index.html
+++ b/static/index.html
@@ -36,7 +36,7 @@
       </div>
       <div style="width: 50%;">
 
-        <canvas id="canvas"></canvas>
+        <canvas id="canvas" width="400px" height="400px"></canvas>
       </div>
     </div>
   <script src="/js/app.bundle.js"></script>
