Adds stop button and error messages

--- a/static/index.html
+++ b/static/index.html
@@ -32,13 +32,14 @@
         <textarea id="textarea"></textarea>
 
         <button class = "btn btn-warning m-2" id="run">Run</button>
+        <button class = "btn btn-warning m-2" id="stop">Stop</button>
     
       </div>
       <div style="width: 50%;">
-
         <canvas id="canvas" width="400px" height="400px"></canvas>
+        <div id="console"></div>
       </div>
     </div>
-  <script src="/js/app.bundle.js"></script>
+    <script src="/js/app.bundle.js"></script>
   </body>
 </html> 
