--- a/static/index.html
+++ b/static/index.html
@@ -30,9 +30,10 @@
       <div style="width: 50%; float:left;">
 
         <textarea id="textarea"></textarea>
-
-        <button class = "btn btn-warning m-2" id="run">Run</button>
-        <button class = "btn btn-warning m-2" id="stop">Stop</button>
+        <div style="background-color: black;">
+          <button class = "btn btn-warning m-2" id="run">Run</button>
+          <button class = "btn btn-warning m-2" id="stop">Stop</button>
+        </div>
     
       </div>
       <div style="width: 50%;">
