--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@
       <div style="width: 50%; float:left;">
 
         <textarea id="textarea"></textarea>
-        <div style="background-color: black;">
+        <div style="background-color: #272822;">
           <button class = "btn btn-warning m-2" id="run">Run</button>
           <button class = "btn btn-warning m-2" id="stop">Stop</button>
         </div>
