Adds snake comments and changes nav colour

--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
     <script src="/builtin.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark">
+    <nav class="navbar navbar-expand-sm" style="background-color: #272822;">
       <!-- Links -->
       <ul class="navbar-nav">
         <a class="navbar-brand" href="#">
