Makes buttons same colour

--- a/static/index.html
+++ b/static/index.html
@@ -31,8 +31,8 @@
 
         <textarea id="textarea"></textarea>
         <div style="background-color: #272822;">
-          <button class = "btn btn-warning m-2" id="run">Run</button>
-          <button class = "btn btn-warning m-2" id="stop">Stop</button>
+          <button class = "btn btn-yellow m-2" id="run">Run</button>
+          <button class = "btn btn-yellow m-2" id="stop">Stop</button>
         </div>
     
       </div>
