Adds title to page

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="/skulpt.js"></script>
     <script src="/builtin.js"></script>
+    <title>PyPlay</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm" style="background-color: #272822;">
