Adds code output title

--- a/static/index.html
+++ b/static/index.html
@@ -39,7 +39,9 @@
       </div>
       <div style="width: 50%;">
         <canvas id="canvas" width="400px" height="400px"></canvas>
-        <div id="console"></div>
+        <div id="consoletitle">Text Output:</div>
+        <div id="console">
+        </div>
       </div>
     </div>
     <script src="/js/app.bundle.js"></script>
